# qdbg

./: .pre-commit-config.yaml  README.md  get-qdbg.py  pyproject.toml
.github/workflows/: lint.yml  unittest.yml
qdbg/: __init__.py  cli.py
test/: test_cli.py
